# MSDAW

./: .gitmodules  CMakeLists.txt  readme.md
Source/: AppConfig.cpp  AppConfig.h  AudioProcessor.h  Editor.cpp  Editor.h  EditorContext.h  Main.cpp  Parameter.cpp  Parameter.h  PluginManager.cpp  PluginManager.h  Project.cpp  Project.h  SystemMonitor.cpp  SystemMonitor.h  Theme.cpp  Theme.h  Track.cpp  Track.h
Source/Clips/: AudioClip.cpp  AudioClip.h  MIDIClip.cpp  MIDIClip.h
Source/Parameters/: KnobParameter.cpp  SliderParameter.cpp
Source/Processors/: DelayReverbProcessor.cpp  EqProcessor.cpp  OTTProcessor.cpp  SimpleSynth.cpp  SimpleSynth.h  VST3Processor.cpp  VST3Processor.h  VSTProcessor.cpp  VSTProcessor.h
Source/Undo/: Actions.h
Source/Views/: ClipView.cpp  ClipView.h  DeviceRackView.cpp  LibraryView.cpp  PianoRollView.cpp  PianoRollView.h  TimelineView.cpp  TimelineView.h  TrackListView.cpp  TrackListView.h  TransportView.cpp
Source/Views/TimelineView/: TimelineAutomationRenderer.cpp  TimelineClipRenderer.cpp  TimelineRuler.cpp  TimelineRuler.h  TimelineTrackView.cpp  TimelineUtils.cpp
